--- a/admin/src/index.css
+++ b/admin/src/index.css
@@ -1,6 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Roboto+Slab:wght@100..900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
+*{
+    font-family: Roboto Slab;
+}
 
 /* Base styles for better touch targets */
 button, [role="button"], a {
